X   X
    * Add Sword + Punch = knock out of hand (right-click player)
    * Add Sword + Fortune = pickpocket (right-click player)
    * Add Sword + Infinity = selective invisibility (right-click player)
    * Add Chestplate + Punch = brass knuckles (more damage with fists)
    * Add Chestplate + Respiration = fish mode (no damage in water)
    * Add Leggings + Knockback = tackle (more damage when sprinting)
    * Add support for custom items from PlasticCraft, Forestry, Mo' Foods mods in default config
    * Fix Sword + Silk Touch = capture creating invalid spawn eggs on non-standard mobs

2012-02-25  0.7.5
    * Add Bow + Feather Falling II = grapple hook (hold Shift to hang on)
    * Add Sword + Silk Touch = capture (right-click to drop creature/boat/minecart/primedTNT as item)
    * Add Flint & Steel + Silk Touch = remote detonate (ignite TNT)
    * Add Chestplate + Sharpness = reflect damage
    * Add Leggings + Feather Falling = surface (triple-tap shift)
    * Add Fishing Rod + Sharpness = damage mobs
    * Add Pickaxe + Sharpness = mine ore vein
    * Add Hoe + Punch = grow animal
    * Add Pickaxe/Shovel/Axe + Flame II = auto-smelt and light path
    * Add support for custom items from Metallurgy mod in default config
    * Change Hoe + Bane of Arthropods, now left-click starts storm, right-click stops
    * Enhance Bow + Respiration = stapled arrows: try TNT, water, lava (spawn egg, potions...)
    * Enhance Shears + Looting, now can be used to acquire saddle from saddled pigs
    * Enhance Hoe + Fire Protection = sensor, now can show information on entities
    * Enhance Pickaxe + Silk Touch II, now can harvest and place double slabs
    * Enhance Pickaxe + Silk Touch II, now can harvest and place hidden silverfish blocks
    * Partial support for per-effect configuration options (see config.yml)
    * Partial (warning: incomplete!) WorldGuard support
      Caution: some effects (particularly explosions) still bypass protections (ticket 4)
