@@ -2,6 +2,7 @@ X   X
     * Add Sword + Punch = knock out of hand (right-click player)
     * Add Sword + Fortune = pickpocket (right-click player)
     * Add Sword + Infinity = selective invisibility (right-click player)
+    * Add Sword + Respiration = kickhammer
     * Add Chestplate + Punch = brass knuckles (more damage with fists)
     * Add Chestplate + Respiration = fish mode (no damage in water)
     * Add Leggings + Knockback = tackle (more damage when sprinting)
